# uv-build-export-test

./: fix_editable_build.py
project-a/: README.md  pyproject.toml
project-a-consumer/: README.md  pyproject.toml  requirements.txt
project-a-consumer/src/project_a_consumer/: __init__.py  hello_from_consumer.py
project-a/src/project_a/: __init__.py  hello_from_project_a.py
