[project]
name = "project-a-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Margaret Black", email = "black_margaret@bah.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "project-a",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
project-a = { path = "../project-a", editable = true }
